# score-addon-spatgris

./: .clang-format  CMakeLists.txt  README.md  addon.json  release.sh  score_addon_my_device.cpp  score_addon_my_device.hpp  score_addon_spatgris.cpp  score_addon_spatgris.hpp
.github/workflows/: jit.yml
MyDevice/: ProtocolFactory.cpp  ProtocolFactory.hpp
SpatGRIS/: Device.cpp  Device.hpp  Protocol.hpp  ProtocolFactory.cpp  ProtocolFactory.hpp  ProtocolSettingsWidget.cpp  ProtocolSettingsWidget.hpp  SpecificSettings.hpp  SpecificSettingsSerialization.cpp
